--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <link rel="stylesheet" href="../build/style.css">
+    <link rel="stylesheet" href="build/style.css">
            
     <title>Peak-logo</title>
   </head>
